--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tree-sitter-traversal"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/skmendez/tree-sitter-traversal"
@@ -14,10 +14,11 @@ keywords = ["tree-sitter", "traverse", "traversal", "tree"]
 categories = ["algorithms", "data-structures", "no-std"]
 
 [dependencies]
-tree-sitter = {version=">= 0.19, < 0.21", optional=true}
+tree-sitter = {version=">= 0.22", optional=true}
 
 [dev-dependencies]
-tree-sitter-rust = "0.20.0"
+tree-sitter-rust = "0.21.0"
+tree-sitter-cpp = "0.22.0"
 
 [features]
 default = ["tree-sitter"]
