--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
-name = "tree-sitter-traversal"
+name = "baz-tree-sitter-traversal"
 version = "0.1.3"
 edition = "2021"
+rust-version = "1.66" # MSRV
+
 license = "MIT"
-repository = "https://github.com/skmendez/tree-sitter-traversal"
+repository = "https://github.com/baz-scm/tree-sitter-traversal"
 documentation = "https://docs.rs/tree-sitter-traversal/"
-authors = ["skmendez"]
+authors = ["Baz"]
 readme = "README.md"
 
 description = "Traversal of tree-sitter Trees and any arbitrary tree with a TreeCursor-like interface"
@@ -17,8 +19,8 @@ categories = ["algorithms", "data-structures", "no-std"]
 tree-sitter = {version=">= 0.22", optional=true}
 
 [dev-dependencies]
-tree-sitter-rust = "0.21.0"
-tree-sitter-cpp = "0.22.0"
+tree-sitter-rust = "0.21"
+tree-sitter-cpp = "0.22"
 
 [features]
 default = ["tree-sitter"]
