--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "baz-tree-sitter-traversal"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 rust-version = "1.66" # MSRV
 
@@ -14,6 +14,9 @@ description = "Traversal of tree-sitter Trees and any arbitrary tree with a Tree
 
 keywords = ["tree-sitter", "traverse", "traversal", "tree"]
 categories = ["algorithms", "data-structures", "no-std"]
+
+[lib]
+name = "tree_sitter_traversal"
 
 [package.metadata.release]
 allow-branch = ["HEAD"]
